# Netology_CPP_Diplom

./: readme.md
CMake/: CPM.cmake
Crawler/: CMakeLists.txt  WebCrawler.cpp
Include/: DB_Client.h  HTTP_HTTPs_Client.h  HTTP_Server.h  INI_File.h  Utils.h
Ini/: config.ini
Server/: CMakeLists.txt  WebServer.cpp
